kubernetes/apps/argo-workflows/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: argo
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.5.51
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 2746
      targetPort: 2746
  selector:
    app: argo-server
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin
  name: httpbin
spec:
  ports:
    - name: api
      port: 9100
      protocol: TCP
      targetPort: 80
  selector:
    app: httpbin
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio
spec:
  ports:
    - name: api
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: dashboard
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: minio
