kubernetes/apps/argo-workflows/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-workflows-ingress
  namespace: argo
spec:
  ingressClassName: nginx
  rules:
    - host: argoworkflows.home.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
